- Removed unused and faulty profiling format options (key_threads,
  cluster_threads, thread_sum, thread_tuple, and none).
- The deprecated `SCOREP_ENABLE_SYSTEM_TREE_SEQUENCE_DEFINITIONS` feature
  has been removed.
- Score-P now adds every `--instrument-filter` file to the
  `CCACHE_EXTRAFILES` environment variable to make `ccache` aware
  of the filter file and its contents.

Compatibility:

- The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
  deprecated. Use the `SCOREP_USER_*` macros instead.
- Non-LLVM based CCE compilers are no longer supported. Please upgrade.
- Added the environment variable `NVCC` to change the compiler
  command used for checking the NVIDIA CUDA compiler during configure.
- Remove OpenACC configure options and environment variables to
  specify include paths to `openacc.h` and `acc_prof.h`. Compilers
  implementing OpenACC know where to find the header files.
- Added flag `--disable-libwrap-generator` to disable the build
  of the library wrapper generator. While `--without-llvm` still
  disables this build as well, `--with-llvm=<path>` will not
  cause configure to fail if the requirements for the generator
  build cannot be satisfied anymore.
- External dependencies which can be downloaded via `--with-lib<foo>=download`
  at configure time, can now be provided via `build-config/packages` or
  `--with-package-cache=<path>`. Run `build-config/packages.sh` to list
  all packages and their respective download URL.
- For unwind, bfd and lustreapi additional `LIBS`, `LDFLAGS` and
  `CPPFLAGS` can be passed during configure (e.g. via `LIBBFD_EXTRA_LIBS`) to
  ensure that these libraries are detected correctly.
- Score-P's installed libraries can be built either shared or static,
  but not the combination of both in one installation. The default
  changed to shared. For a pure static build, use `--enable-static
  --disable-shared`.
  With an either shared or static installation, the `scorep` and